ag/oxout.output
Grammar

    0 $accept: yyyAugNonterm $end

    1 $@1: /* empty */

    2 yyyAugNonterm: $@1 Input

    3 Input: Program

    4 Program: /* empty */
    5        | Program Structdef T_SEMICOLON
    6        | Program Funcdef T_SEMICOLON

    7 Funcdef: T_FUNC T_ID T_BRACKET_LEFT Params T_BRACKET_RIGHT Stats T_END

    8 Structdef: T_STRUCT T_ID T_DOUBLE_POINT Felder T_END

    9 Params: /* empty */
   10       | Params T_ID

   11 Felder: /* empty */
   12       | Felder T_ID

   13 Stats: /* empty */
   14      | Stats Stat T_SEMICOLON

   15 LetRec: /* empty */
   16       | LetRec T_ID T_EQUAL Expr T_SEMICOLON

   17 CondRec: /* empty */
   18        | CondRec Expr T_THEN Stats T_END T_SEMICOLON

   19 Stat: T_RETURN Expr
   20     | T_COND CondRec T_END
   21     | T_LET LetRec T_IN Stats T_END
   22     | T_WITH Expr T_DOUBLE_POINT T_ID T_DO Stats T_END
   23     | Lexpr T_EQUAL Expr
   24     | Term

   25 Lexpr: T_ID
   26      | Term T_POINT T_ID

   27 SignTerm: Term
   28         | T_MINUS SignTerm
   29         | T_NOT SignTerm

   30 Expr: Term
   31     | T_MINUS SignTerm
   32     | T_NOT SignTerm
   33     | PlusExpr
   34     | MultExpr
   35     | OrExpr
   36     | Term T_GREATER Term
   37     | Term T_NOT_EQUAL Term

   38 PlusExpr: Term T_PLUS Term
   39         | PlusExpr T_PLUS Term

   40 MultExpr: Term T_MUL Term
   41         | MultExpr T_MUL Term

   42 OrExpr: Term T_OR Term
   43       | OrExpr T_OR Term

   44 Term: T_BRACKET_LEFT Expr T_BRACKET_RIGHT
   45     | T_NUM
   46     | Term T_POINT T_ID
   47     | T_ID
   48     | T_ID T_BRACKET_LEFT T_BRACKET_RIGHT
   49     | T_ID T_BRACKET_LEFT ExprList T_BRACKET_RIGHT
   50     | T_ID T_BRACKET_LEFT ExprList T_COLON T_BRACKET_RIGHT

   51 ExprList: Expr
   52         | ExprList T_COLON Expr


Terminals, with rules where they appear

$end (0) 0
error (256)
T_WITH (258) 22
T_STRUCT (259) 8
T_RETURN (260) 19
T_NUM (261) 45
T_COND (262) 20
T_END (263) 7 8 18 20 21 22
T_ID (264) 7 8 10 12 16 22 25 26 46 47 48 49 50
T_LET (265) 21
T_IN (266) 21
T_FUNC (267) 7
T_OR (268) 42 43
T_NOT (269) 29 32
T_DO (270) 22
T_THEN (271) 18
T_BRACKET_LEFT (272) 7 44 48 49 50
T_BRACKET_RIGHT (273) 7 44 48 49 50
T_DOUBLE_POINT (274) 8 22
T_SEMICOLON (275) 5 6 14 16 18
T_EQUAL (276) 16 23
T_POINT (277) 26 46
T_MINUS (278) 28 31
T_PLUS (279) 38 39
T_MUL (280) 40 41
T_GREATER (281) 36
T_NOT_EQUAL (282) 37
T_COLON (283) 50 52


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
yyyAugNonterm (30)
    on left: 2, on right: 0
$@1 (31)
    on left: 1, on right: 2
Input (32)
    on left: 3, on right: 2
Program (33)
    on left: 4 5 6, on right: 3 5 6
Funcdef (34)
    on left: 7, on right: 6
Structdef (35)
    on left: 8, on right: 5
Params (36)
    on left: 9 10, on right: 7 10
Felder (37)
    on left: 11 12, on right: 8 12
Stats (38)
    on left: 13 14, on right: 7 14 18 21 22
LetRec (39)
    on left: 15 16, on right: 16 21
CondRec (40)
    on left: 17 18, on right: 18 20
Stat (41)
    on left: 19 20 21 22 23 24, on right: 14
Lexpr (42)
    on left: 25 26, on right: 23
SignTerm (43)
    on left: 27 28 29, on right: 28 29 31 32
Expr (44)
    on left: 30 31 32 33 34 35 36 37, on right: 16 18 19 22 23 44 51
    52
PlusExpr (45)
    on left: 38 39, on right: 33 39
MultExpr (46)
    on left: 40 41, on right: 34 41
OrExpr (47)
    on left: 42 43, on right: 35 43
Term (48)
    on left: 44 45 46 47 48 49 50, on right: 24 26 27 30 36 37 38 39
    40 41 42 43 46
ExprList (49)
    on left: 51 52, on right: 49 50 52


state 0

    0 $accept: . yyyAugNonterm $end

    $default  reduce using rule 1 ($@1)

    yyyAugNonterm  go to state 1
    $@1            go to state 2


state 1

    0 $accept: yyyAugNonterm . $end

    $end  shift, and go to state 3


state 2

    2 yyyAugNonterm: $@1 . Input

    $default  reduce using rule 4 (Program)

    Input    go to state 4
    Program  go to state 5


state 3

    0 $accept: yyyAugNonterm $end .

    $default  accept


state 4

    2 yyyAugNonterm: $@1 Input .

    $default  reduce using rule 2 (yyyAugNonterm)


state 5

    3 Input: Program .
    5 Program: Program . Structdef T_SEMICOLON
    6        | Program . Funcdef T_SEMICOLON

    T_STRUCT  shift, and go to state 6
    T_FUNC    shift, and go to state 7

    $default  reduce using rule 3 (Input)

    Funcdef    go to state 8
    Structdef  go to state 9


state 6

    8 Structdef: T_STRUCT . T_ID T_DOUBLE_POINT Felder T_END

    T_ID  shift, and go to state 10


state 7

    7 Funcdef: T_FUNC . T_ID T_BRACKET_LEFT Params T_BRACKET_RIGHT Stats T_END

    T_ID  shift, and go to state 11


state 8

    6 Program: Program Funcdef . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 12


state 9

    5 Program: Program Structdef . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 13


state 10

    8 Structdef: T_STRUCT T_ID . T_DOUBLE_POINT Felder T_END

    T_DOUBLE_POINT  shift, and go to state 14


state 11

    7 Funcdef: T_FUNC T_ID . T_BRACKET_LEFT Params T_BRACKET_RIGHT Stats T_END

    T_BRACKET_LEFT  shift, and go to state 15


state 12

    6 Program: Program Funcdef T_SEMICOLON .

    $default  reduce using rule 6 (Program)


state 13

    5 Program: Program Structdef T_SEMICOLON .

    $default  reduce using rule 5 (Program)


state 14

    8 Structdef: T_STRUCT T_ID T_DOUBLE_POINT . Felder T_END

    $default  reduce using rule 11 (Felder)

    Felder  go to state 16


state 15

    7 Funcdef: T_FUNC T_ID T_BRACKET_LEFT . Params T_BRACKET_RIGHT Stats T_END

    $default  reduce using rule 9 (Params)

    Params  go to state 17


state 16

    8 Structdef: T_STRUCT T_ID T_DOUBLE_POINT Felder . T_END
   12 Felder: Felder . T_ID

    T_END  shift, and go to state 18
    T_ID   shift, and go to state 19


state 17

    7 Funcdef: T_FUNC T_ID T_BRACKET_LEFT Params . T_BRACKET_RIGHT Stats T_END
   10 Params: Params . T_ID

    T_ID             shift, and go to state 20
    T_BRACKET_RIGHT  shift, and go to state 21


state 18

    8 Structdef: T_STRUCT T_ID T_DOUBLE_POINT Felder T_END .

    $default  reduce using rule 8 (Structdef)


state 19

   12 Felder: Felder T_ID .

    $default  reduce using rule 12 (Felder)


state 20

   10 Params: Params T_ID .

    $default  reduce using rule 10 (Params)


state 21

    7 Funcdef: T_FUNC T_ID T_BRACKET_LEFT Params T_BRACKET_RIGHT . Stats T_END

    $default  reduce using rule 13 (Stats)

    Stats  go to state 22


state 22

    7 Funcdef: T_FUNC T_ID T_BRACKET_LEFT Params T_BRACKET_RIGHT Stats . T_END
   14 Stats: Stats . Stat T_SEMICOLON

    T_WITH          shift, and go to state 23
    T_RETURN        shift, and go to state 24
    T_NUM           shift, and go to state 25
    T_COND          shift, and go to state 26
    T_END           shift, and go to state 27
    T_ID            shift, and go to state 28
    T_LET           shift, and go to state 29
    T_BRACKET_LEFT  shift, and go to state 30

    Stat   go to state 31
    Lexpr  go to state 32
    Term   go to state 33


state 23

   22 Stat: T_WITH . Expr T_DOUBLE_POINT T_ID T_DO Stats T_END

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 35
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 36

    Expr      go to state 37
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Term      go to state 41


state 24

   19 Stat: T_RETURN . Expr

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 35
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 36

    Expr      go to state 42
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Term      go to state 41


state 25

   45 Term: T_NUM .

    $default  reduce using rule 45 (Term)


state 26

   20 Stat: T_COND . CondRec T_END

    $default  reduce using rule 17 (CondRec)

    CondRec  go to state 43


state 27

    7 Funcdef: T_FUNC T_ID T_BRACKET_LEFT Params T_BRACKET_RIGHT Stats T_END .

    $default  reduce using rule 7 (Funcdef)


state 28

   25 Lexpr: T_ID .
   47 Term: T_ID .
   48     | T_ID . T_BRACKET_LEFT T_BRACKET_RIGHT
   49     | T_ID . T_BRACKET_LEFT ExprList T_BRACKET_RIGHT
   50     | T_ID . T_BRACKET_LEFT ExprList T_COLON T_BRACKET_RIGHT

    T_BRACKET_LEFT  shift, and go to state 44

    T_EQUAL   reduce using rule 25 (Lexpr)
    $default  reduce using rule 47 (Term)


state 29

   21 Stat: T_LET . LetRec T_IN Stats T_END

    $default  reduce using rule 15 (LetRec)

    LetRec  go to state 45


state 30

   44 Term: T_BRACKET_LEFT . Expr T_BRACKET_RIGHT

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 35
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 36

    Expr      go to state 46
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Term      go to state 41


state 31

   14 Stats: Stats Stat . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 47


state 32

   23 Stat: Lexpr . T_EQUAL Expr

    T_EQUAL  shift, and go to state 48


state 33

   24 Stat: Term .
   26 Lexpr: Term . T_POINT T_ID
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 49

    $default  reduce using rule 24 (Stat)


state 34

   47 Term: T_ID .
   48     | T_ID . T_BRACKET_LEFT T_BRACKET_RIGHT
   49     | T_ID . T_BRACKET_LEFT ExprList T_BRACKET_RIGHT
   50     | T_ID . T_BRACKET_LEFT ExprList T_COLON T_BRACKET_RIGHT

    T_BRACKET_LEFT  shift, and go to state 44

    $default  reduce using rule 47 (Term)


state 35

   32 Expr: T_NOT . SignTerm

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 50
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 51

    SignTerm  go to state 52
    Term      go to state 53


state 36

   31 Expr: T_MINUS . SignTerm

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 50
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 51

    SignTerm  go to state 54
    Term      go to state 53


state 37

   22 Stat: T_WITH Expr . T_DOUBLE_POINT T_ID T_DO Stats T_END

    T_DOUBLE_POINT  shift, and go to state 55


state 38

   33 Expr: PlusExpr .
   39 PlusExpr: PlusExpr . T_PLUS Term

    T_PLUS  shift, and go to state 56

    $default  reduce using rule 33 (Expr)


state 39

   34 Expr: MultExpr .
   41 MultExpr: MultExpr . T_MUL Term

    T_MUL  shift, and go to state 57

    $default  reduce using rule 34 (Expr)


state 40

   35 Expr: OrExpr .
   43 OrExpr: OrExpr . T_OR Term

    T_OR  shift, and go to state 58

    $default  reduce using rule 35 (Expr)


state 41

   30 Expr: Term .
   36     | Term . T_GREATER Term
   37     | Term . T_NOT_EQUAL Term
   38 PlusExpr: Term . T_PLUS Term
   40 MultExpr: Term . T_MUL Term
   42 OrExpr: Term . T_OR Term
   46 Term: Term . T_POINT T_ID

    T_OR         shift, and go to state 59
    T_POINT      shift, and go to state 60
    T_PLUS       shift, and go to state 61
    T_MUL        shift, and go to state 62
    T_GREATER    shift, and go to state 63
    T_NOT_EQUAL  shift, and go to state 64

    $default  reduce using rule 30 (Expr)


state 42

   19 Stat: T_RETURN Expr .

    $default  reduce using rule 19 (Stat)


state 43

   18 CondRec: CondRec . Expr T_THEN Stats T_END T_SEMICOLON
   20 Stat: T_COND CondRec . T_END

    T_NUM           shift, and go to state 25
    T_END           shift, and go to state 65
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 35
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 36

    Expr      go to state 66
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Term      go to state 41


state 44

   48 Term: T_ID T_BRACKET_LEFT . T_BRACKET_RIGHT
   49     | T_ID T_BRACKET_LEFT . ExprList T_BRACKET_RIGHT
   50     | T_ID T_BRACKET_LEFT . ExprList T_COLON T_BRACKET_RIGHT

    T_NUM            shift, and go to state 25
    T_ID             shift, and go to state 34
    T_NOT            shift, and go to state 35
    T_BRACKET_LEFT   shift, and go to state 30
    T_BRACKET_RIGHT  shift, and go to state 67
    T_MINUS          shift, and go to state 36

    Expr      go to state 68
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Term      go to state 41
    ExprList  go to state 69


state 45

   16 LetRec: LetRec . T_ID T_EQUAL Expr T_SEMICOLON
   21 Stat: T_LET LetRec . T_IN Stats T_END

    T_ID  shift, and go to state 70
    T_IN  shift, and go to state 71


state 46

   44 Term: T_BRACKET_LEFT Expr . T_BRACKET_RIGHT

    T_BRACKET_RIGHT  shift, and go to state 72


state 47

   14 Stats: Stats Stat T_SEMICOLON .

    $default  reduce using rule 14 (Stats)


state 48

   23 Stat: Lexpr T_EQUAL . Expr

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 35
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 36

    Expr      go to state 73
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Term      go to state 41


state 49

   26 Lexpr: Term T_POINT . T_ID
   46 Term: Term T_POINT . T_ID

    T_ID  shift, and go to state 74


state 50

   29 SignTerm: T_NOT . SignTerm

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 50
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 51

    SignTerm  go to state 75
    Term      go to state 53


state 51

   28 SignTerm: T_MINUS . SignTerm

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 50
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 51

    SignTerm  go to state 76
    Term      go to state 53


state 52

   32 Expr: T_NOT SignTerm .

    $default  reduce using rule 32 (Expr)


state 53

   27 SignTerm: Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 60

    $default  reduce using rule 27 (SignTerm)


state 54

   31 Expr: T_MINUS SignTerm .

    $default  reduce using rule 31 (Expr)


state 55

   22 Stat: T_WITH Expr T_DOUBLE_POINT . T_ID T_DO Stats T_END

    T_ID  shift, and go to state 77


state 56

   39 PlusExpr: PlusExpr T_PLUS . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 78


state 57

   41 MultExpr: MultExpr T_MUL . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 79


state 58

   43 OrExpr: OrExpr T_OR . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 80


state 59

   42 OrExpr: Term T_OR . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 81


state 60

   46 Term: Term T_POINT . T_ID

    T_ID  shift, and go to state 82


state 61

   38 PlusExpr: Term T_PLUS . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 83


state 62

   40 MultExpr: Term T_MUL . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 84


state 63

   36 Expr: Term T_GREATER . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 85


state 64

   37 Expr: Term T_NOT_EQUAL . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 86


state 65

   20 Stat: T_COND CondRec T_END .

    $default  reduce using rule 20 (Stat)


state 66

   18 CondRec: CondRec Expr . T_THEN Stats T_END T_SEMICOLON

    T_THEN  shift, and go to state 87


state 67

   48 Term: T_ID T_BRACKET_LEFT T_BRACKET_RIGHT .

    $default  reduce using rule 48 (Term)


state 68

   51 ExprList: Expr .

    $default  reduce using rule 51 (ExprList)


state 69

   49 Term: T_ID T_BRACKET_LEFT ExprList . T_BRACKET_RIGHT
   50     | T_ID T_BRACKET_LEFT ExprList . T_COLON T_BRACKET_RIGHT
   52 ExprList: ExprList . T_COLON Expr

    T_BRACKET_RIGHT  shift, and go to state 88
    T_COLON          shift, and go to state 89


state 70

   16 LetRec: LetRec T_ID . T_EQUAL Expr T_SEMICOLON

    T_EQUAL  shift, and go to state 90


state 71

   21 Stat: T_LET LetRec T_IN . Stats T_END

    $default  reduce using rule 13 (Stats)

    Stats  go to state 91


state 72

   44 Term: T_BRACKET_LEFT Expr T_BRACKET_RIGHT .

    $default  reduce using rule 44 (Term)


state 73

   23 Stat: Lexpr T_EQUAL Expr .

    $default  reduce using rule 23 (Stat)


state 74

   26 Lexpr: Term T_POINT T_ID .
   46 Term: Term T_POINT T_ID .

    T_EQUAL   reduce using rule 26 (Lexpr)
    $default  reduce using rule 46 (Term)


state 75

   29 SignTerm: T_NOT SignTerm .

    $default  reduce using rule 29 (SignTerm)


state 76

   28 SignTerm: T_MINUS SignTerm .

    $default  reduce using rule 28 (SignTerm)


state 77

   22 Stat: T_WITH Expr T_DOUBLE_POINT T_ID . T_DO Stats T_END

    T_DO  shift, and go to state 92


state 78

   39 PlusExpr: PlusExpr T_PLUS Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 60

    $default  reduce using rule 39 (PlusExpr)


state 79

   41 MultExpr: MultExpr T_MUL Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 60

    $default  reduce using rule 41 (MultExpr)


state 80

   43 OrExpr: OrExpr T_OR Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 60

    $default  reduce using rule 43 (OrExpr)


state 81

   42 OrExpr: Term T_OR Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 60

    $default  reduce using rule 42 (OrExpr)


state 82

   46 Term: Term T_POINT T_ID .

    $default  reduce using rule 46 (Term)


state 83

   38 PlusExpr: Term T_PLUS Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 60

    $default  reduce using rule 38 (PlusExpr)


state 84

   40 MultExpr: Term T_MUL Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 60

    $default  reduce using rule 40 (MultExpr)


state 85

   36 Expr: Term T_GREATER Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 60

    $default  reduce using rule 36 (Expr)


state 86

   37 Expr: Term T_NOT_EQUAL Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 60

    $default  reduce using rule 37 (Expr)


state 87

   18 CondRec: CondRec Expr T_THEN . Stats T_END T_SEMICOLON

    $default  reduce using rule 13 (Stats)

    Stats  go to state 93


state 88

   49 Term: T_ID T_BRACKET_LEFT ExprList T_BRACKET_RIGHT .

    $default  reduce using rule 49 (Term)


state 89

   50 Term: T_ID T_BRACKET_LEFT ExprList T_COLON . T_BRACKET_RIGHT
   52 ExprList: ExprList T_COLON . Expr

    T_NUM            shift, and go to state 25
    T_ID             shift, and go to state 34
    T_NOT            shift, and go to state 35
    T_BRACKET_LEFT   shift, and go to state 30
    T_BRACKET_RIGHT  shift, and go to state 94
    T_MINUS          shift, and go to state 36

    Expr      go to state 95
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Term      go to state 41


state 90

   16 LetRec: LetRec T_ID T_EQUAL . Expr T_SEMICOLON

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 35
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 36

    Expr      go to state 96
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Term      go to state 41


state 91

   14 Stats: Stats . Stat T_SEMICOLON
   21 Stat: T_LET LetRec T_IN Stats . T_END

    T_WITH          shift, and go to state 23
    T_RETURN        shift, and go to state 24
    T_NUM           shift, and go to state 25
    T_COND          shift, and go to state 26
    T_END           shift, and go to state 97
    T_ID            shift, and go to state 28
    T_LET           shift, and go to state 29
    T_BRACKET_LEFT  shift, and go to state 30

    Stat   go to state 31
    Lexpr  go to state 32
    Term   go to state 33


state 92

   22 Stat: T_WITH Expr T_DOUBLE_POINT T_ID T_DO . Stats T_END

    $default  reduce using rule 13 (Stats)

    Stats  go to state 98


state 93

   14 Stats: Stats . Stat T_SEMICOLON
   18 CondRec: CondRec Expr T_THEN Stats . T_END T_SEMICOLON

    T_WITH          shift, and go to state 23
    T_RETURN        shift, and go to state 24
    T_NUM           shift, and go to state 25
    T_COND          shift, and go to state 26
    T_END           shift, and go to state 99
    T_ID            shift, and go to state 28
    T_LET           shift, and go to state 29
    T_BRACKET_LEFT  shift, and go to state 30

    Stat   go to state 31
    Lexpr  go to state 32
    Term   go to state 33


state 94

   50 Term: T_ID T_BRACKET_LEFT ExprList T_COLON T_BRACKET_RIGHT .

    $default  reduce using rule 50 (Term)


state 95

   52 ExprList: ExprList T_COLON Expr .

    $default  reduce using rule 52 (ExprList)


state 96

   16 LetRec: LetRec T_ID T_EQUAL Expr . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 100


state 97

   21 Stat: T_LET LetRec T_IN Stats T_END .

    $default  reduce using rule 21 (Stat)


state 98

   14 Stats: Stats . Stat T_SEMICOLON
   22 Stat: T_WITH Expr T_DOUBLE_POINT T_ID T_DO Stats . T_END

    T_WITH          shift, and go to state 23
    T_RETURN        shift, and go to state 24
    T_NUM           shift, and go to state 25
    T_COND          shift, and go to state 26
    T_END           shift, and go to state 101
    T_ID            shift, and go to state 28
    T_LET           shift, and go to state 29
    T_BRACKET_LEFT  shift, and go to state 30

    Stat   go to state 31
    Lexpr  go to state 32
    Term   go to state 33


state 99

   18 CondRec: CondRec Expr T_THEN Stats T_END . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 102


state 100

   16 LetRec: LetRec T_ID T_EQUAL Expr T_SEMICOLON .

    $default  reduce using rule 16 (LetRec)


state 101

   22 Stat: T_WITH Expr T_DOUBLE_POINT T_ID T_DO Stats T_END .

    $default  reduce using rule 22 (Stat)


state 102

   18 CondRec: CondRec Expr T_THEN Stats T_END T_SEMICOLON .

    $default  reduce using rule 18 (CondRec)
